# Orca

./: Cargo.toml
crates/orca-agents/: Cargo.toml
crates/orca-agents/src/: lib.rs
crates/orca-cli/: Cargo.toml
crates/orca-cli/src/: daemon_client.rs  main.rs
crates/orca-core/: Cargo.toml
crates/orca-core/src/: lib.rs
crates/orca-daemon/: Cargo.toml
crates/orca-daemon/src/: lib.rs
crates/orca-kb/: Cargo.toml
crates/orca-kb/src/: lib.rs
crates/orca-tui/: Cargo.toml
crates/orca-tui/src/: lib.rs
crates/orca-wizard/: Cargo.toml
crates/orca-wizard/src/: lib.rs
docs/: AGENTS.md  AGENT_ADAPTERS.md  ARCHITECTURE.md  BUILD_PLAN.md  CLI.md  CONTRIBUTING.md  KB.md  LICENSE.md  README.md  RPC.md  STATE.md  TASK_LIFECYCLE.md  UI.md  VISION.md  WORK_TRACKER.md
