[package]
name = "orca-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "orca"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
orca-daemon = { path = "../orca-daemon" }
orca-wizard = { path = "../orca-wizard" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
